# pymsort

./: .gitignore  .pylintrc  README.md  main.py  pyproject.toml
src/pymsort/: ConversionProfiles.json  app.py  mainwindow.py  mediafiles_tablemodel.py  mediafiles_tableview.py
src/pymsort/models/: __init__.py  conversion_profile.py  mediafile.py
src/pymsort/services/: __init__.py  exiftool_service.py  ffmpeg_service.py  mediainfo_service.py
src/pymsort/utils/: __init__.py  config.py  startup_checks.py
src/pymsort/workers/: __init__.py  import_worker.py  process_worker.py
tests/: __init__.py  conftest.py  test_config.py  test_conversion_profile.py  test_exiftool_service.py  test_ffmpeg_service.py  test_import_worker.py  test_mediafile.py  test_mediafiles_tablemodel.py  test_mediainfo_service.py  test_process_worker.py  test_startup_checks.py
